[tool.poetry]
name = "MagicXML"
version = "1.1.0"
description = ""
authors = ["Solrikk <reveni324@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
fastapi = "^0.104.0"
uvicorn = "0.23.2"
pydantic = "^2.5.3"
requests = "^2.31.0"
spacy = "^3.7.2"
scikit-learn = "^1.4.2"
aiohttp = "^3.9.5"
aiofiles = "^24.1.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"